--- a/css/demo01.css
+++ b/css/demo01.css
@@ -1,7 +1,7 @@
 ﻿/**
     color theme
 */
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300italic&subset=latin,vietnamese);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,vietnamese);
 
 body {
     font-family:"Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -101,28 +101,6 @@ a, a:link, a:visited {
    display:none;
 }
 
-@media(max-width:767px){}
-@media(min-width:768px){
-    #m_menu {
-        position: fixed;
-        right: 0;
-        top: 50%;
-        margin-top: -150px;
-        width:4.2em;
-        margin-right:2px;
-    }
-
-    #m_menu li {
-        float:none;
-        display:block;
-        width:100%;
-        padding: 5px 0;
-    }
-}
-@media(min-width:992px){}
-@media(min-width:1200px){}
-
-
 .btn {
     -webkit-box-shadow: 10px 0px 0px rgba(0,0,0,0.4); 
     box-shadow: 0px 0px 0px rgba(0,0,0,0.4);
@@ -175,14 +153,15 @@ h4.modal-title {font-family:roboto; font-weight:300;}
     border:none;
     margin:0 auto;
     display:block;
-    width:40%;    
+    max-width:80%;    
+    margin-top:-10%;
 }
 
 #hello_section #p1_logo_area #p1_products {
     border:none;
     margin:0 auto;
     display:block;
-    width:25%;    
+    max-width:50%;    
 }
 
 #about_section #p2_products {
@@ -225,4 +204,44 @@ h4.modal-title {font-family:roboto; font-weight:300;}
     height:100%;
     width:100%;
     display:block;
+}
+
+
+@media(max-width:767px){
+
+}
+
+@media(min-width:768px){
+    #m_menu {
+        position: fixed;
+        right: 0;
+        top: 50%;
+        margin-top: -150px;
+        width:4.2em;
+        margin-right:2px;
+    }
+
+    #m_menu li {
+        float:none;
+        display:block;
+        width:100%;
+        padding: 5px 0;
+    }
+
+    #hello_section #p1_logo_area #p1_logo
+    {
+        max-width:500px;
+        margin-top:0;
+    }
+
+    #hello_section #p1_logo_area #p1_products
+    {
+        max-width:300px;
+    }
+}
+@media(min-width:992px){
+    
+}
+@media(min-width:1200px){
+
 }
