--- a/v2/res/css/index.css
+++ b/v2/res/css/index.css
@@ -155,3 +155,37 @@ img.map, map area{
 img[usemap], map area{
     outline: none;
 }
+
+#back-to-top{
+		position:fixed;
+		bottom:37px;
+		right:5px;
+	}
+	#back-to-top a{
+		text-align:center;
+		text-decoration:none;
+		color:#d1d1d1;
+		display:block;
+		width:37px;		
+		-moz-transition:color 1s; 
+		-webkit-transition:color 1s;
+		-o-transition:color 1s;
+	}
+	#back-to-top a:hover{
+		color:#979797;
+	}
+	#back-to-top a span{
+		background:transparent;
+		border-radius:6px;
+		display:block;
+		height:37px;
+		width:37px;
+		background:transparent url(/v2/res/images/arrow-up.png) no-repeat center center;
+		margin-bottom:5px;
+		-moz-transition:background 1s;
+		-webkit-transition:background 1s;
+		-o-transition:background 1s;
+	}
+	#back-to-top a:hover span{
+		background:#979797 url(/v2/res/images/arrow-up.png) no-repeat center center;
+	}
