--- a/v2/res/css/index.css
+++ b/v2/res/css/index.css
@@ -79,6 +79,10 @@ html {
     margin-top: 10rem;
     margin-bottom: 3rem;
   }
+
+  .service-text  {
+    font-size: 1.2rem;
+  }
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -189,3 +193,13 @@ img[usemap], map area{
 	#back-to-top a:hover span{
 		background:#979797 url(/v2/res/images/arrow-up.png) no-repeat center center;
 	}
+
+.table td.fit, 
+.table th.fit {
+    white-space: nowrap;
+    width: 1%;
+}
+
+.table tbody>tr>td, .table tbody>tr>th{
+    vertical-align: middle;
+}
