--- a/v2/res/css/index.css
+++ b/v2/res/css/index.css
@@ -209,7 +209,7 @@ img[usemap], map area{
   background-color: #eee;
 }
 
-.modal-header {
+.modal-footer {
   border-top:none;
   background-color: #fcfcfc;
 }
