--- a/v2/res/css/index.css
+++ b/v2/res/css/index.css
@@ -206,7 +206,7 @@ img[usemap], map area{
 
 .modal-header {
   border-bottom: none;
-  background-color: #eee;
+  background-color: #fafafa;
 }
 
 .modal-footer {
