--- a/v2/res/css/index.css
+++ b/v2/res/css/index.css
@@ -220,7 +220,8 @@ img[usemap], map area{
 
 
 textarea, textarea.form-control, input.form-control, input[type=text], input[type=password], input[type=email], input[type=number], [type=text].form-control, [type=password].form-control, [type=email].form-control, [type=tel].form-control, [contenteditable].form-control {
-    padding: 0rem 1rem;
+    padding: 0;
+    padding-left:0.5rem;
     border: solid 1px #ddd;
     box-shadow: none;
     -webkit-box-shadow:none;
