--- a/v2/res/css/index.css
+++ b/v2/res/css/index.css
@@ -239,3 +239,9 @@ textarea {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  margin: 0; /* Removes leftover margin */
+}
