--- a/v2/res/css/index.css
+++ b/v2/res/css/index.css
@@ -217,7 +217,6 @@ img[usemap], map area{
   background-color: #fafafa;
 }
 
-
 textarea, textarea.form-control, input.form-control, input[type=text], input[type=password], input[type=email], input[type=number], [type=text].form-control, [type=password].form-control, [type=email].form-control, [type=tel].form-control, [contenteditable].form-control {
     padding: 0;
     padding-left:0.5rem;
@@ -244,3 +243,17 @@ input[type="number"]:hover,
 input[type="number"]:focus {
   -moz-appearance: number-input;
 }
+
+#footer-links {
+    list-style: none;
+    padding: 0;
+    display: inline-block;
+    
+}
+
+#footer-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+#footer-links  a {color:#fff;text-decoration: underline;}
